tenants/payments/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: payments
  labels:
    name: payments
    team: payments
    policy.sigstore.dev/include: "true"
