tenants/payments/networkpolicy-allow-same-ns-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: payments-allow-same-ns-ingress
  namespace: payments
  annotations:
    argocd.argoproj.io/sync-wave: "20"
spec:
  podSelector: {}
  policyTypes:
    - Ingress
  ingress:
    - from:
        - podSelector: {}
